--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "split-type": "^0.3.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
